# shopping_list_mcp

./: README.md  main.py  pyproject.toml  shopping_list.py
src/: __init__.py  config.py  database.py  exceptions.py  models.py  server.py
src/services/: __init__.py  shopping_list_service.py  user_service.py
src/tools/: __init__.py  shopping_tools.py
tests/: __init__.py
